CMAKE_MINIMUM_REQUIRED(VERSION 3.5.0)
PROJECT(3dlj CXX)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

# directories
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
#SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

# include & link
#INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

# Boost
FIND_PACKAGE(Boost 1.41.0 REQUIRED COMPONENTS program_options)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

# HDF5
#FIND_PACKAGE(HDF5 COMPONENTS CXX REQUIRED)
#INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIRS})
#LINK_DIRECTORIES(${HDF5_LIBRARY_DIRS})
#ADD_DEFINITIONS(-DIOER_WITH_HDF5)       

# MPI
#FIND_PACKAGE(MPI REQUIRED COMPONENTS CXX)
#INCLUDE_DIRECTORIES(${MPI_CXX_INCLUDE_PATH})
#LINK_DIRECTORIES(${MPI_CXX_LIBRARIES})

# MKL
#FIND_PACKAGE(MKL REQUIRED)
#INCLUDE_DIRECTORIES(${MKL_INCLUDE_DIRS})
#LINK_DIRECTORIES(${MKL_LIBRARY_DIRS})

# sub directories
#ADD_SUBDIRECTORY(src)

ADD_EXECUTABLE(3dlj run3dlj.cpp)
TARGET_LINK_LIBRARIES(3dlj PUBLIC ${Boost_LIBRARIES})
